--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "@hapi/joi-date": "^2.0.1",
     "adm-zip": "^0.4.16",
     "agentkeepalive": "^4.1.3",
-    "applicationinsights": "^1.8.5",
+    "applicationinsights": "1.8.8",
     "applicationinsights-native-metrics": "0.0.5",
     "body-parser": "^1.19.0",
     "case": "^1.6.3",
@@ -155,7 +155,7 @@
     "@typescript-eslint/parser": "^3.7.0",
     "concurrently": "^5.2.0",
     "eslint": "7.12.1",
-    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-config-prettier": "6.14.0",
     "eslint-import-resolver-typescript": "^2.0.0",
@@ -166,7 +166,7 @@
     "jest-html-reporter": "3.3.0",
     "jest-junit": "^11.1.0",
     "lint-staged": "10.5.0",
-    "nock": "^13.0.2",
+    "nock": "13.0.5",
     "node-sass": "^4.14.1",
     "nodemon": "2.0.6",
     "pdf-parse": "^1.1.1",
