--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,16 @@ services:
       - POSTGRES_USER=licences
       - POSTGRES_DB=licences
 
+  licence-redis:
+    image: 'bitnami/redis:5.0'
+    networks:
+      - hmpps
+    container_name: licence-redis
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - '6379:6379'
+
   hmpps-auth:
     image: quay.io/hmpps/hmpps-auth:latest
     networks:
