--- a/package.json
+++ b/package.json
@@ -97,22 +97,24 @@
   },
   "dependencies": {
     "@hapi/joi-date": "^2.0.1",
-    "adm-zip": "^0.4.16",
+    "adm-zip": "^0.5.1",
     "agentkeepalive": "^4.1.3",
-    "applicationinsights": "1.8.8",
+    "applicationinsights": "1.8.9",
     "applicationinsights-native-metrics": "0.0.5",
     "body-parser": "^1.19.0",
     "case": "^1.6.3",
     "compression": "^1.7.4",
     "concat-stream": "^2.0.0",
-    "config": "3.3.2",
+    "config": "3.3.3",
     "connect-flash": "^0.1.1",
+    "connect-redis": "5.0.0",
     "cookie-parser": "^1.4.5",
-    "cookie-session": "^2.0.0-beta.3",
+    "cookie-session": "^2.0.0-rc.1",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-request-id": "^1.4.1",
+    "express-session": "1.17.1",
     "govuk-elements-sass": "^3.1.3",
     "govuk_frontend_toolkit": "^9.0.0",
     "govuk_template_jinja": "^0.26.0",
@@ -121,58 +123,59 @@
     "jquery": "^1.12.4",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "knex": "0.21.8",
+    "knex": "0.21.16",
     "knex-migrate": "^1.7.4",
-    "moment": "2.29.0",
+    "moment": "2.29.1",
     "moment-business-days": "^1.2.0",
     "nocache": "^2.1.0",
     "node-schedule": "^1.3.2",
-    "notifications-node-client": "^4.8.0",
+    "notifications-node-client": "^4.9.0",
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
     "path": "^0.12.7",
-    "pg": "8.4.2",
+    "pg": "8.5.1",
     "pg-format": "^1.0.4",
     "poll-endpoint-for": "0.0.7",
     "pug": "^3.0.0",
-    "puppeteer": "^5.4.2",
+    "puppeteer": "^5.5.0",
     "querystring": "^0.2.0",
-    "ramda": "^0.27.0",
+    "ramda": "^0.27.1",
+    "redis": "3.0.2",
     "request": "^2.88.2",
     "romannumerals": "^1.1.1",
     "string-hash": "^1.1.3",
     "superagent": "^5.3.1",
-    "swagger-ui-express": "^4.1.4",
+    "swagger-ui-express": "^4.1.6",
     "util": "^0.12.3",
-    "uuid": "8.3.1",
+    "uuid": "8.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/jest": "26.0.15",
-    "@types/node": "14.14.5",
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.22",
     "@types/puppeteer": "^5.4.2",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
-    "concurrently": "^5.2.0",
-    "eslint": "7.12.1",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "concurrently": "^5.3.0",
+    "eslint": "7.18.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-airbnb-typescript": "^9.0.0",
-    "eslint-config-prettier": "6.14.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.2.5",
-    "jest": "26.6.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.8",
+    "jest": "26.6.3",
     "jest-html-reporter": "3.3.0",
     "jest-junit": "^11.1.0",
-    "lint-staged": "10.5.0",
-    "nock": "13.0.5",
+    "lint-staged": "10.5.3",
+    "nock": "13.0.6",
     "node-sass": "^4.14.1",
-    "nodemon": "2.0.6",
+    "nodemon": "2.0.7",
     "pdf-parse": "^1.1.1",
-    "prettier": "2.0.5",
+    "prettier": "2.2.1",
     "supertest": "^4.0.2",
-    "ts-jest": "26.4.3",
+    "ts-jest": "26.4.4",
     "typescript": "^3.9.7"
   },
   "bin": {
