--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -40,6 +40,7 @@ services:
       API_CLIENT_SECRET: "clientsecret"
       ADMIN_API_CLIENT_ID: "licencesadmin"
       ADMIN_API_CLIENT_SECRET: "clientsecret"
+      REDIS_HOST: "licence-redis"
 
   stubs:
     build: .
@@ -65,6 +66,16 @@ services:
       - POSTGRES_PASSWORD=licences
       - POSTGRES_USER=licences
       - POSTGRES_DB=licences
+
+  licence-redis:
+    image: 'bitnami/redis:5.0'
+    networks:
+      - hmpps
+    container_name: licence-redis
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - '6379:6379'
 
   hmpps-auth:
     image: quay.io/hmpps/hmpps-auth:latest
