--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": "^6.4.1"
   },
   "scripts": {
+    "postinstall": "husky install",
     "copy-views": "cp -R server/views/ dist/server/views/ && cp -R mock-server/routes/images dist/mock-server/routes",
     "watch-views": "nodemon --watch server/views -e pug -x npm run copy-views",
     "watch-ts": "tsc -w",
@@ -16,8 +17,7 @@
     "start": "node dist/server.js",
     "start:dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"Views,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-views\" \"npm run watch-ts\" \"npm run watch-node\"",
     "start-mocks": "node mock-server/start.js",
-    "test": "jest",
-    "test-ci": "jest --runInBand",
+    "test": "jest --runInBand",
     "lint": "eslint .",
     "typecheck": "tsc",
     "record-build-info": "node ./bin/record-build-info",
@@ -27,11 +27,6 @@
     "db:knex-migrate": "knex-migrate",
     "db:seed": "knex seed:run --env standard",
     "security_audit": "npx audit-ci --config audit-ci.json"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "NODE_ENV=dev && lint-staged && tsc"
-    }
   },
   "lint-staged": {
     "*.{js,css}": [
@@ -98,7 +93,7 @@
   "dependencies": {
     "@hapi/joi-date": "^2.0.1",
     "adm-zip": "0.5.2",
-    "agentkeepalive": "^4.1.3",
+    "agentkeepalive": "^4.1.4",
     "applicationinsights": "1.8.9",
     "applicationinsights-native-metrics": "0.0.5",
     "body-parser": "^1.19.0",
@@ -107,7 +102,7 @@
     "concat-stream": "^2.0.0",
     "config": "3.3.3",
     "connect-flash": "^0.1.1",
-    "connect-redis": "5.0.0",
+    "connect-redis": "5.1.0",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^2.0.0-rc.1",
     "csurf": "^1.11.0",
@@ -115,21 +110,21 @@
     "express": "^4.17.1",
     "express-request-id": "^1.4.1",
     "express-session": "1.17.1",
-    "govuk-elements-sass": "^3.1.3",
     "govuk_frontend_toolkit": "^9.0.0",
     "govuk_template_jinja": "^0.26.0",
-    "helmet": "^3.23.3",
-    "joi": "17.3.0",
+    "govuk-elements-sass": "^3.1.3",
+    "helmet": "^4.4.1",
+    "joi": "17.4.0",
     "jquery": "^1.12.4",
     "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^2.2.0",
-    "knex": "0.21.16",
+    "jwt-decode": "^3.1.2",
+    "knex": "0.21.17",
     "knex-migrate": "^1.7.4",
     "moment": "2.29.1",
     "moment-business-days": "^1.2.0",
     "nocache": "^2.1.0",
-    "node-schedule": "1.3.3",
-    "notifications-node-client": "^4.9.0",
+    "node-schedule": "^2.0.0",
+    "notifications-node-client": "^5.1.0",
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
     "path": "^0.12.7",
@@ -144,7 +139,7 @@
     "request": "^2.88.2",
     "romannumerals": "^1.1.1",
     "string-hash": "^1.1.3",
-    "superagent": "^5.3.1",
+    "superagent": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "util": "^0.12.3",
     "uuid": "8.3.2",
@@ -152,31 +147,31 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.20",
-    "@types/node": "14.14.22",
-    "@types/puppeteer": "^5.4.2",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@types/node": "14.14.25",
+    "@types/puppeteer": "^5.4.3",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "concurrently": "^5.3.0",
-    "eslint": "7.18.0",
+    "eslint": "7.19.0",
     "eslint-config-airbnb-base": "14.2.1",
-    "eslint-config-airbnb-typescript": "^9.0.0",
-    "eslint-config-prettier": "6.15.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "7.2.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^4.3.8",
+    "husky": "^5.0.9",
     "jest": "26.6.3",
     "jest-html-reporter": "3.3.0",
-    "jest-junit": "^11.1.0",
-    "lint-staged": "10.5.3",
-    "nock": "13.0.6",
-    "node-sass": "^4.14.1",
+    "jest-junit": "^12.0.0",
+    "lint-staged": "10.5.4",
+    "nock": "13.0.7",
+    "node-sass": "^5.0.0",
     "nodemon": "2.0.7",
     "pdf-parse": "^1.1.1",
     "prettier": "2.2.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "26.4.4",
-    "typescript": "^3.9.7"
+    "supertest": "^6.1.3",
+    "ts-jest": "26.5.1",
+    "typescript": "^4.1.4"
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
