--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,17 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@2.1.0
+  hmpps: ministryofjustice/hmpps@2.3
 
 executors:
   integration-tests:
     docker:
       - image: circleci/openjdk:11-jdk-node-browsers
-      - image: circleci/postgres:10.6-alpine-ram
+      - image: circleci/postgres:10.13-ram
         environment:
           POSTGRES_USER: licences
           POSTGRES_DB: licences
+          POSTGRES_PASSWORD: licences 
       - image: quay.io/hmpps/hmpps-auth:latest
         name: hmpps-auth
         environment:
@@ -18,19 +19,16 @@ executors:
           SERVER_PORT: 9090
       - image: bitnami/redis:5.0
         environment:
-          ALLOW_EMPTY_PASSWORD: 'yes'
+          ALLOW_EMPTY_PASSWORD=yes
     working_directory: ~/app
 
 jobs:
   build:
     executor:
       name: hmpps/node
-      tag: 12.18.2-buster-browsers
+      tag: 14.15-browsers
     steps:
       - checkout
-      - run:
-          name: Update npm
-          command: 'sudo npm install -g npm@latest'
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
@@ -42,15 +40,15 @@ jobs:
             - node_modules
             - ~/.cache
       - run:
-          name: Linter check
-          command: npm run lint
-      - run:
           command: |
             npm run build
             DATE=$(date '+%Y-%m-%d')
             export BUILD_NUMBER=${DATE}.${CIRCLE_BUILD_NUM}
             export GIT_REF="$CIRCLE_SHA1"
             npm run record-build-info
+      - run: # Run linter after build because the integration test code depend on compiled typescript...
+          name: Linter check
+          command: npm run lint
       - persist_to_workspace:
           root: .
           paths:
@@ -63,7 +61,7 @@ jobs:
   unit_test:
     executor:
       name: hmpps/node
-      tag: 12.18.2-buster-browsers
+      tag: 14.15-browsers
     steps:
       - checkout
       - restore_cache:
