--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,12 @@ version: 2.1
 
 orbs:
   hmpps: ministryofjustice/hmpps@2.3
+  browser-tools: circleci/browser-tools@1.1.1
 
 executors:
   integration-tests:
     docker:
-      - image: circleci/openjdk:11-jdk-node-browsers
+      - image: cimg/node:14.15-browsers
       - image: circleci/postgres:10.13-ram
         environment:
           POSTGRES_USER: licences
@@ -85,6 +86,7 @@ jobs:
       PROBATION_TEAMS_API_URL: http://localhost:8080/probationteams
       TOKENVERIFICATION_API_ENABLED: false
     steps:
+      - browser-tools/install-browser-tools
       - checkout
       - attach_workspace:
           at: ~/app
