--- a/licences-specs/build.gradle
+++ b/licences-specs/build.gradle
@@ -1,12 +1,13 @@
 plugins {
-  id "groovy"
+  id 'groovy'
+  id("org.owasp.dependencycheck") version "6.1.1"
+  id("com.github.ben-manes.versions") version "0.36.0"
 }
 
 ext {
   ext {
-    groovyVersion = '2.5.5'
-    gebVersion = '2.2'
-    seleniumVersion = '3.12.0'
+    gebVersion = '4.0'
+    seleniumVersion = '3.141.59'
   }
 }
 
@@ -22,20 +23,13 @@ project.targetCompatibility = 11
 dependencies {
 
   testCompile 'net.sourceforge.jtds:jtds:1.3.1'
-  testCompile 'cglib:cglib-nodep:3.1'
-  testCompile 'com.jayway.jsonpath:json-path:2.1.0'
-  testCompile 'com.mashape.unirest:unirest-java:1.4.9'
-  testCompile 'org.awaitility:awaitility-groovy:2.0.0'
-  testCompile "org.codehaus.groovy:groovy-all:$groovyVersion"
+  testCompile 'com.jayway.jsonpath:json-path:2.5.0'
   testCompile "org.gebish:geb-core:$gebVersion"
   testCompile "org.gebish:geb-spock:$gebVersion"
+  testCompile "org.spockframework:spock-core:1.3-groovy-2.5"
   testCompile "org.seleniumhq.selenium:selenium-support:$seleniumVersion"
   testCompile "org.seleniumhq.selenium:selenium-chrome-driver:$seleniumVersion"
   testCompile "org.seleniumhq.selenium:selenium-firefox-driver:$seleniumVersion"
-
-  testCompile('org.spockframework:spock-core:1.2-groovy-2.5') {
-    exclude group: "org.codehaus.groovy"
-  }
   testCompile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.1'
 }
 
