--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "adm-zip": "0.5.3",
     "agentkeepalive": "^4.1.4",
     "applicationinsights": "1.8.10",
-    "applicationinsights-native-metrics": "0.0.5",
+    "applicationinsights-native-metrics": "0.0.6",
     "body-parser": "^1.19.0",
     "case": "^1.6.3",
     "compression": "^1.7.4",
@@ -147,11 +147,11 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.20",
-    "@types/node": "14.14.28",
+    "@types/node": "14.14.31",
     "@types/puppeteer": "^5.4.3",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "concurrently": "^5.3.0",
+    "concurrently": "^6.0.0",
     "eslint": "7.20.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -159,7 +159,7 @@
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.0.9",
+    "husky": "^5.1.0",
     "jest": "26.6.3",
     "jest-html-reporter": "3.3.0",
     "jest-junit": "^12.0.0",
@@ -171,7 +171,7 @@
     "prettier": "2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "26.5.1",
-    "typescript": "^4.1.5"
+    "typescript": "4.1.4"
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
