DCS-890 More reliable build.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 executors:
   integration-tests:
     docker:
-      - image: cimg/node:14.15-browsers
+      - image: cimg/node:14.16-browsers
       - image: circleci/postgres:10.13-ram
         environment:
           POSTGRES_USER: licences
@@ -27,7 +27,7 @@ jobs:
   build:
     executor:
       name: hmpps/node
-      tag: 14.15-browsers
+      tag: 14.16-browsers
     steps:
       - checkout
       - restore_cache:
@@ -62,7 +62,7 @@ jobs:
   unit_test:
     executor:
       name: hmpps/node
-      tag: 14.15-browsers
+      tag: 14.16-browsers
     steps:
       - checkout
       - restore_cache:
@@ -146,19 +146,19 @@ workflows:
           name: helm_lint
       - hmpps/build_docker:
           name: build_docker
-          filters:
-            branches:
-              only:
-                - main
+#          filters:
+#            branches:
+#              only:
+#                - main
       - hmpps/deploy_env:
           name: deploy_dev
           env: "dev"
           context:
             - hmpps-common-vars
-          filters:
-            branches:
-              only:
-                - main
+#          filters:
+#            branches:
+#              only:
+#                - main
           requires:
             - helm_lint
             - unit_test
@@ -166,6 +166,10 @@ workflows:
             - build_docker
       - request-preprod-approval:
           type: approval
+          filters:
+            branches:
+              only:
+                - main
           requires:
             - deploy_dev
       - hmpps/deploy_env:
