DT-1767 - slack notifications for dependency check, and add SAST scan job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -190,7 +190,7 @@ workflows:
           requires:
             - request-prod-approval
 
-  scheduled:
+  security:
     triggers:
       - schedule:
           cron: "0 6 * * 1-5"
@@ -199,4 +199,10 @@ workflows:
               only:
                 - main
     jobs:
-      - hmpps/npm_security_audit
+      - hmpps/npm_security_audit:
+          context:
+            - hmpps-common-vars
+      - hmpps/veracode_pipeline_scan:
+          context:
+            - hmpps-common-vars
+
