--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -44,6 +44,9 @@ allowlist:
   j5-phones-1: "35.177.125.252/32"
   j5-phones-2: "35.177.137.160/32"
   sodexo-northumberland: "88.98.48.10/32"
+  sodexo-northumberland2: "51.148.47.137/32"
+  sodoxeo-forest-bank: "51.155.85.249/32"
+  sodexo-peterborough: "51.155.55.241/32"
   serco: "217.22.14.0/24"
   durham-tees-valley: "51.179.197.1/32"
   oakwood-1: "217.161.76.187/32"
