--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -18,7 +18,7 @@ ingress:
 env:
   NOMIS_API_URL: "https://api.prison.service.justice.gov.uk"
   NOMIS_AUTH_URL: "https://sign-in.hmpps.service.justice.gov.uk/auth"
-  GLOBAL_SEARCH_URL: "https://whereabouts.prison.service.justice.gov.uk/global-search"
+  GLOBAL_SEARCH_URL: "https://digital.prison.service.justice.gov.uk/global-search"
   AUTH_STRATEGY: "oauth"
   PUSH_TO_NOMIS: "yes"
   REMINDERS_SCHEDULE_RO: "0 1 * * 1-5"
