--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -43,6 +43,7 @@ allowlist:
   mojvpn: "81.134.202.29/32"
   j5-phones-1: "35.177.125.252/32"
   j5-phones-2: "35.177.137.160/32"
+  sodexo-bronzefield: "51.148.9.201/32"
   sodexo-northumberland: "88.98.48.10/32"
   sodexo-northumberland2: "51.148.47.137/32"
   sodoxeo-forest-bank: "51.155.85.249/32"
