--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "node dist/server.js",
     "start:dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"Views,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-views\" \"npm run watch-ts\" \"npm run watch-node\"",
     "start-mocks": "node mock-server/start.js",
-    "test": "jest --runInBand",
+    "test": "jest --runInBand --testPathPattern=/test/.*",
+    "integrationTest": "jest --runInBand --testPathPattern=/integration_test/.*",
     "lint": "eslint .",
     "typecheck": "tsc",
     "record-build-info": "node ./bin/record-build-info",
@@ -64,7 +65,8 @@
       "server/**/*.{ts,js,jsx,mjs}"
     ],
     "testMatch": [
-      "<rootDir>/test/**/?(*.)(spec|test).{ts,js,jsx,mjs}"
+      "<rootDir>/test/**/?(*.)(spec|test).{ts,js,jsx,mjs}",
+      "<rootDir>/integration_test/**/?(*.)(spec|test).{ts,js,jsx,mjs}"
     ],
     "testEnvironment": "node",
     "reporters": [
