--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ executors:
         user: gotenberg
         environment:
           DEFAULT_LISTEN_PORT: 3001
-  working_directory: ~/app
+    working_directory: ~/app
 
   integration-tests:
     docker:
@@ -91,8 +91,10 @@ jobs:
       - attach_workspace:
           at: ~/app
       - run:
-          name: Run Javascript Integration Tests
+          name: Javascript Integration Tests
           command: npm run integrationTest
+      - store_test_results:
+          path: test-results
       - store_artifacts:
           path: test-results/unit-test-reports.html
 
