--- a/licences-specs/build.gradle
+++ b/licences-specs/build.gradle
@@ -1,12 +1,12 @@
 plugins {
   id 'groovy'
-  id("org.owasp.dependencycheck") version "6.1.1"
-  id("com.github.ben-manes.versions") version "0.36.0"
+  id("org.owasp.dependencycheck") version "6.1.5"
+  id("com.github.ben-manes.versions") version "0.38.0"
 }
 
 ext {
   ext {
-    gebVersion = '4.0'
+    gebVersion = '4.1'
     seleniumVersion = '3.141.59'
   }
 }
@@ -22,15 +22,16 @@ project.targetCompatibility = 11
 
 dependencies {
 
-  testCompile 'net.sourceforge.jtds:jtds:1.3.1'
-  testCompile 'com.jayway.jsonpath:json-path:2.5.0'
-  testCompile "org.gebish:geb-core:$gebVersion"
-  testCompile "org.gebish:geb-spock:$gebVersion"
-  testCompile "org.spockframework:spock-core:1.3-groovy-2.5"
-  testCompile "org.seleniumhq.selenium:selenium-support:$seleniumVersion"
-  testCompile "org.seleniumhq.selenium:selenium-chrome-driver:$seleniumVersion"
-  testCompile "org.seleniumhq.selenium:selenium-firefox-driver:$seleniumVersion"
-  testCompile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.1'
+  testImplementation 'org.codehaus.groovy:groovy-all:2.5.14'
+  testImplementation 'net.sourceforge.jtds:jtds:1.3.1'
+  testImplementation 'com.jayway.jsonpath:json-path:2.5.0'
+  testImplementation "org.gebish:geb-core:$gebVersion"
+  testImplementation "org.gebish:geb-spock:$gebVersion"
+  testImplementation "org.spockframework:spock-core:1.3-groovy-2.5"
+  testImplementation "org.seleniumhq.selenium:selenium-support:$seleniumVersion"
+  testImplementation "org.seleniumhq.selenium:selenium-chrome-driver:$seleniumVersion"
+  testImplementation "org.seleniumhq.selenium:selenium-firefox-driver:$seleniumVersion"
+  testImplementation 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.1'
 }
 
 task mockTest(type: Test) {
