DCS-803 Spike - Generate PDFs using Gotenberg.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,7 +173,7 @@ workflows:
       - hmpps/helm_lint:
           name: helm_lint
       - hmpps/build_docker:
-#          name: build_docker
+          name: build_docker
 #          filters:
 #            branches:
 #              only:
