--- a/helm_deploy/licences/Chart.yaml
+++ b/helm_deploy/licences/Chart.yaml
@@ -3,3 +3,7 @@ appVersion: "1.1"
 description: A Helm chart for the HDC licences application
 name: licences
 version: 2.0.0
+
+dependencies:
+  - name: gotenberg
+    version: "0.1.x"
