--- a/helm_deploy/licences/charts/gotenberg/values.yaml
+++ b/helm_deploy/licences/charts/gotenberg/values.yaml
@@ -1,6 +1,6 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-
+# These 'default' values can be overriden by the parent chart: https://helm.sh/docs/chart_template_guide/subcharts_and_globals/
 replicaCount: 2
 
 image:
