--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -8,6 +8,14 @@ image:
   tag: latest
   port: 3000
 
+# Supplies values to the nested gotenberg chart. https://helm.sh/docs/chart_template_guide/subcharts_and_globals/
+gotenberg:
+  replicaCount: 4
+  image:
+    repository: thecodingmachine/gotenberg
+    tag: 6.4.3
+    port: 3000
+
 ingress:
   enabled: true
   enable_allowlist: true
