--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,19 +174,19 @@ workflows:
           name: helm_lint
       - hmpps/build_docker:
           name: build_docker
-#          filters:
-#            branches:
-#              only:
-#                - main
+          filters:
+            branches:
+              only:
+                - main
       - hmpps/deploy_env:
           name: deploy_dev
           env: "dev"
           context:
             - hmpps-common-vars
-#          filters:
-#            branches:
-#              only:
-#                - main
+          filters:
+            branches:
+              only:
+                - main
           requires:
             - helm_lint
             - unit_test
