--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.8'
 services:
   licence-db:
     image: postgres
@@ -22,6 +22,17 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - '6379:6379'
+
+  gotenberg:
+    image: thecodingmachine/gotenberg:6.4.3
+    networks:
+      - hmpps
+    container_name: gotenberg
+    restart: always
+    ports:
+      - '3001:3000'
+    healthcheck:
+      test: [ 'CMD', 'curl', '-f', 'http://localhost:3001/ping' ]
 
   hmpps-auth:
     image: quay.io/hmpps/hmpps-auth:latest
