--- a/helm_deploy/licences/Chart.yaml
+++ b/helm_deploy/licences/Chart.yaml
@@ -1,5 +1,9 @@
-apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart for Kubernetes
+apiVersion: v2
+appVersion: "1.1"
+description: A Helm chart for the HDC licences application
 name: licences
-version: 0.1.0
+version: 2.0.0
+
+dependencies:
+  - name: gotenberg
+    version: "0.1.x"
