DT-2012 - upgrade hmpps orb, and add veracode policy scan job.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@3.0
+  hmpps: ministryofjustice/hmpps@3.2
   browser-tools: circleci/browser-tools@1.1.1
 
 executors:
@@ -230,7 +230,8 @@ workflows:
       - hmpps/npm_security_audit:
           context:
             - hmpps-common-vars
-      - hmpps/veracode_pipeline_scan:
+      - hmpps/veracode_policy_scan:
           context:
+            - veracode-credentials
             - hmpps-common-vars
 
