DT-2081 - deploy prometheus generic alerts chart

--- a/helm_deploy/licences/Chart.yaml
+++ b/helm_deploy/licences/Chart.yaml
@@ -2,9 +2,12 @@ apiVersion: v2
 appVersion: "1.1"
 description: A Helm chart for the HDC licences application
 name: licences
-version: 2.0.0
+version: 2.0.1
 
 dependencies:
   - name: gotenberg
     version: "0.1.x"
     repository: file://subcharts/gotenberg
+  - name: generic-prometheus-alerts
+    version: 0.1.2
+    repository: https://ministryofjustice.github.io/hmpps-helm-charts
