--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,11 +10,7 @@
       "parser": "@typescript-eslint/parser",
       "plugins": ["@typescript-eslint", "import"],
       "files": ["**/*.ts"],
-      "extends": [
-        "airbnb-typescript/base",
-        "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
-      ],
+      "extends": ["airbnb-typescript/base", "plugin:prettier/recommended", "prettier"],
       "parserOptions": {
         "project": "./tsconfig.json"
       },
