--- a/licences-specs/build.gradle
+++ b/licences-specs/build.gradle
@@ -1,13 +1,13 @@
 plugins {
   id 'groovy'
-  id("org.owasp.dependencycheck") version "6.1.5"
-  id("com.github.ben-manes.versions") version "0.38.0"
+  id("org.owasp.dependencycheck") version "6.2.0"
+  id("com.github.ben-manes.versions") version "0.39.0"
 }
 
 ext {
   ext {
-    gebVersion = '4.1'
-    seleniumVersion = '3.141.59'
+    gebVersion = '5.0-milestone-2'
+    seleniumVersion = '4.0.0-beta-4'
   }
 }
 
@@ -17,21 +17,25 @@ repositories {
   mavenCentral()
 }
 
-project.sourceCompatibility = 11
-project.targetCompatibility = 11
+project.sourceCompatibility = 16
+project.targetCompatibility = 16
 
 dependencies {
 
-  testImplementation 'org.codehaus.groovy:groovy-all:2.5.14'
+  testImplementation 'org.codehaus.groovy:groovy-all:3.0.8'
   testImplementation 'net.sourceforge.jtds:jtds:1.3.1'
-  testImplementation 'com.jayway.jsonpath:json-path:2.5.0'
+  testImplementation 'com.jayway.jsonpath:json-path:2.6.0'
   testImplementation "org.gebish:geb-core:$gebVersion"
   testImplementation "org.gebish:geb-spock:$gebVersion"
-  testImplementation "org.spockframework:spock-core:1.3-groovy-2.5"
+  testImplementation "org.spockframework:spock-core:2.0-groovy-3.0"
   testImplementation "org.seleniumhq.selenium:selenium-support:$seleniumVersion"
   testImplementation "org.seleniumhq.selenium:selenium-chrome-driver:$seleniumVersion"
   testImplementation "org.seleniumhq.selenium:selenium-firefox-driver:$seleniumVersion"
   testImplementation 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.1'
+}
+
+test {
+  useJUnitPlatform()
 }
 
 task mockTest(type: Test) {
