DT-2166 - add trivy image scanning job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@3.2
+  hmpps: ministryofjustice/hmpps@3.5
   browser-tools: circleci/browser-tools@1.1.1
 
 executors:
@@ -228,6 +228,9 @@ workflows:
                 - main
     jobs:
       - hmpps/npm_security_audit:
+          context:
+            - hmpps-common-vars
+      - hmpps/trivy_latest_scan:
           context:
             - hmpps-common-vars
       - hmpps/veracode_policy_scan:
