--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@3.5
+  hmpps: ministryofjustice/hmpps@3.10
   browser-tools: circleci/browser-tools@1.1.1
 
 executors:
@@ -233,6 +233,19 @@ workflows:
       - hmpps/trivy_latest_scan:
           context:
             - hmpps-common-vars
+      - hmpps/veracode_pipeline_scan:
+          context:
+            - veracode-credentials
+            - hmpps-common-vars
+  security-weekly:
+    triggers:
+      - schedule:
+          cron: "18 4 * * 1"
+          filters:
+            branches:
+              only:
+                - main
+    jobs:
       - hmpps/veracode_policy_scan:
           context:
             - veracode-credentials
