--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -70,6 +70,10 @@ allowlist:
   ark-dom1-corsham-psn: "51.247.4.0/24"
   ark-dom1-non-live-1: "194.33.193.0/25"
   ark-dom1-non-live-2: "194.33.197.0/25"
+  moj-official-ark-c-expo-e: "51.149.249.0/29"
+  moj-official-ark-c-vodafone: "194.33.248.0/29"
+  moj-official-ark-f-vodafone: "194.33.249.0/29"
+  moj-official-ark-f-expo-e: "51.149.249.32/29"
   cloudplatform-live1-1: "35.178.209.113/32"
   cloudplatform-live1-2: "3.8.51.207/32"
   cloudplatform-live1-3: "35.177.252.54/32"
