DCS-1166 Move condition service over to typescript

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
       "prettier --write",
       "eslint --fix"
     ],
-    "*.{json}": [
+    "*.json": [
       "prettier --write"
     ]
   },
