--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -22,6 +22,9 @@ ingress:
   host: licences-dev.prison.service.justice.gov.uk
   cert_secret: licences-cert
   path: /
+  annotations:
+    external-dns.alpha.kubernetes.io/set-identifier: licences-licences-dev-blue
+
 
 env:
   DOMAIN:
