--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -22,6 +22,8 @@ ingress:
   host: licences-preprod.prison.service.justice.gov.uk
   cert_secret: licences-cert
   path: /
+  annotations:
+    external-dns.alpha.kubernetes.io/set-identifier: licences-licences-preprod-blue
 
 env:
   NOMIS_API_URL: "https://api-preprod.prison.service.justice.gov.uk"
