--- a/helm_deploy/licences/values.yaml
+++ b/helm_deploy/licences/values.yaml
@@ -4,5 +4,6 @@
 generic-prometheus-alerts:
   targetApplication: licences
 
-  ingress:
+ingress:
+  annotations:
     external-dns.alpha.kubernetes.io/aws-weight: "100"
