DSC-1310 adding ingress annotations (#1319)
* adding ingress annotations

* code review changes

--- a/helm_deploy/licences/values.yaml
+++ b/helm_deploy/licences/values.yaml
@@ -3,3 +3,7 @@
 
 generic-prometheus-alerts:
   targetApplication: licences
+
+ingress:
+  annotations:
+    external-dns.alpha.kubernetes.io/aws-weight: "100"
