DCS-1333: 🔨 Migrate dev to live context

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -20,6 +20,7 @@ ingress:
   enabled: true
   enable_allowlist: false
   host: licences-dev.prison.service.justice.gov.uk
+  contextColour: green
   cert_secret: licences-cert
   path: /
   annotations:
