Add reliance to another service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,9 +44,25 @@ services:
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:8080/auth/health']
     environment:
-      SPRING_PROFILES_ACTIVE: dev,token-verification
+      SPRING_PROFILES_ACTIVE: dev,token-verification,nomis
       TOKENVERIFICATION_ENDPOINT_URL: "http://token-verification-api:8080"
       DELIUS_ENABLED: "false"
+      NOMIS_ENDPOINT_URL: http://nomis-user-roles-api:8080
+
+  nomis-user-roles-api:
+    image: quay.io/hmpps/nomis-user-roles-api:latest
+    networks:
+      - hmpps
+    container_name: nomis-user-roles-api
+    depends_on: [ hmpps-auth ]
+    ports:
+      - "8102:8080"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health/ping"]
+    environment:
+      - SERVER_PORT=8080
+      - SPRING_PROFILES_ACTIVE=dev
+      - API_BASE_URL_OAUTH=http://hmpps-auth:8080/auth
 
   token-verification-api:
     image: quay.io/hmpps/token-verification-api:latest
