--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,15 @@ executors:
       - image: quay.io/hmpps/hmpps-auth:latest
         name: hmpps-auth
         environment:
-          SPRING_PROFILES_ACTIVE: dev
+          SPRING_PROFILES_ACTIVE: dev,nomis
           SERVER_PORT: 9090
+          NOMIS_ENDPOINT_URL: http://nomis-user-roles-api:9190
+      - image: quay.io/hmpps/nomis-user-roles-api:latest
+        name: nomis-user-roles-api
+        environment:
+          SPRING_PROFILES_ACTIVE: dev
+          SERVER_PORT: 9190
+          API_BASE_URL_OAUTH: http://hmpps-auth:9090/auth
       - image: bitnami/redis:5.0
         environment:
           ALLOW_EMPTY_PASSWORD=yes
