--- a/package.json
+++ b/package.json
@@ -96,38 +96,38 @@
     "@hapi/joi-date": "^2.0.1",
     "adm-zip": "0.5.9",
     "agentkeepalive": "^4.1.4",
-    "applicationinsights": "2.1.8",
+    "applicationinsights": "2.2.0",
     "applicationinsights-native-metrics": "0.0.6",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.19.1",
     "case": "^1.6.3",
     "compression": "^1.7.4",
     "concat-stream": "^2.0.0",
     "config": "3.3.6",
     "connect-flash": "^0.1.1",
     "connect-redis": "6.0.0",
-    "cookie-parser": "^1.4.5",
-    "cookie-session": "^2.0.0-rc.1",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "express-request-id": "^1.4.1",
     "express-session": "1.17.2",
     "govuk_frontend_toolkit": "^9.0.1",
     "govuk_template_jinja": "^0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "helmet": "^4.6.0",
-    "joi": "17.4.2",
+    "joi": "17.5.0",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
-    "knex": "0.95.11",
+    "knex": "0.95.15",
     "knex-migrate": "^1.7.4",
     "moment": "2.29.1",
     "moment-business-days": "^1.2.0",
     "nocache": "^3.0.1",
-    "node-schedule": "^2.0.0",
+    "node-schedule": "^2.1.0",
     "notifications-node-client": "^5.1.0",
-    "passport": "^0.5.0",
+    "passport": "^0.5.2",
     "passport-oauth2": "^1.6.1",
     "path": "^0.12.7",
     "pg": "8.7.1",
@@ -141,37 +141,40 @@
     "romannumerals": "^1.1.1",
     "string-hash": "^1.1.3",
     "superagent": "^6.1.0",
-    "swagger-ui-express": "^4.1.6",
+    "swagger-ui-express": "^4.3.0",
     "util": "^0.12.4",
     "uuid": "8.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/jest": "27.0.2",
+    "@types/connect-flash": "^0.0.37",
+    "@types/jest": "27.0.3",
     "@types/node": "14.14.31",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "concurrently": "^6.3.0",
-    "eslint": "7.32.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.0",
+    "@types/passport": "^1.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "concurrently": "^6.5.1",
+    "eslint": "8.5.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-prettier": "^3.4.1",
-    "husky": "^7.0.2",
-    "jest": "27.3.0",
-    "jest-html-reporter": "3.4.1",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "jest": "27.4.5",
+    "jest-html-reporter": "3.4.2",
     "jest-junit": "^13.0.0",
-    "lint-staged": "11.2.3",
-    "nock": "13.1.3",
-    "node-sass": "^6.0.1",
-    "nodemon": "2.0.13",
+    "jest-mock": "^27.4.2",
+    "lint-staged": "12.1.3",
+    "nock": "13.2.1",
+    "node-sass": "^7.0.0",
+    "nodemon": "2.0.15",
     "pdf-parse": "^1.1.1",
-    "prettier": "2.4.1",
+    "prettier": "2.5.1",
     "supertest": "^6.1.6",
-    "ts-jest": "27.0.7",
-    "typescript": "4.4.4"
+    "ts-jest": "27.1.2",
+    "typescript": "4.5.4"
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
