--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,23 @@ orbs:
   hmpps: ministryofjustice/hmpps@3.12
   browser-tools: circleci/browser-tools@1.1.1
 
+parameters:
+  alerts-slack-channel:
+    type: string
+    default: elp_alerts_security
+
+  releases-slack-channel:
+    type: string
+    default: dps-releases
+
+  node-version:
+    type: string
+    default: 14.16-browsers
+
 executors:
   javascript-integration-tests:
     docker:
-      - image: cimg/node:14.16-browsers
+      - image: cimg/node:<< pipeline.parameters.node-version >>
       - image: thecodingmachine/gotenberg:6
         user: gotenberg
         environment:
@@ -16,7 +29,7 @@ executors:
 
   integration-tests:
     docker:
-      - image: cimg/node:14.16-browsers
+      - image: cimg/node:<< pipeline.parameters.node-version >>
       - image: circleci/postgres:10.13-ram
         environment:
           POSTGRES_USER: licences
@@ -43,7 +56,7 @@ jobs:
   build:
     executor:
       name: hmpps/node
-      tag: 14.16-browsers
+      tag: << pipeline.parameters.node-version >>
     steps:
       - checkout
       - restore_cache:
@@ -78,7 +91,7 @@ jobs:
   unit_test:
     executor:
       name: hmpps/node
-      tag: 14.16-browsers
+      tag: << pipeline.parameters.node-version >>
     steps:
       - checkout
       - restore_cache:
@@ -219,6 +232,7 @@ workflows:
           name: deploy_prod
           env: "prod"
           slack_notification: true
+          slack_channel_name: << pipeline.parameters.releases-slack-channel >>
           context:
             - licences-prod
             - hmpps-common-vars
@@ -235,12 +249,15 @@ workflows:
                 - main
     jobs:
       - hmpps/npm_security_audit:
+          slack_channel: << pipeline.parameters.alerts-slack-channel >>
           context:
             - hmpps-common-vars
       - hmpps/trivy_latest_scan:
+          slack_channel: << pipeline.parameters.alerts-slack-channel >>
           context:
             - hmpps-common-vars
       - hmpps/veracode_pipeline_scan:
+          slack_channel: << pipeline.parameters.alerts-slack-channel >>
           context:
             - veracode-credentials
             - hmpps-common-vars
@@ -254,6 +271,7 @@ workflows:
                 - main
     jobs:
       - hmpps/veracode_policy_scan:
+          slack_channel: << pipeline.parameters.alerts-slack-channel >>
           context:
             - veracode-credentials
             - hmpps-common-vars
