--- a/feature.env
+++ b/feature.env
@@ -16,7 +16,7 @@ DB_SSL_ENABLED=false
 DB_PORT=5432
 
 # NOMIS API
-NOMIS_API_URL=http://localhost:8080/elite2api
+NOMIS_API_URL=http://localhost:8080/prisonApi
 NOMIS_AUTH_URL=http://localhost:9090/auth
 NOMIS_AUTH_EXTERNAL_URL=http://localhost:9090/auth
 API_CLIENT_ID=licences
