DCS-1672 Update alert channel for refresh job
This isn't automated so I've manually applied the change and updating here for future reference

--- a/database_refresh/03-prometheus-alert.yaml
+++ b/database_refresh/03-prometheus-alert.yaml
@@ -17,5 +17,5 @@ spec:
       expr: kube_job_status_failed{namespace="licences-prod",job_name=~"db-refresh-job.*"} > 0
       for: 1m
       labels:
-        severity: digital-prison-service
+        severity: elp_alerts
 
