DCS-1893 upgrade gradle wrapper back to 7.6 and upgrade json path dependency to invalidatate dependency cache in circle
DCS-1893 downgrade gradle to invalidate circleci cache

DCS-1893 added integration test version pages for risk management

DCS-1893 pr changes, removed empty string from RiskVersion type and updated getRiskVersion to chck for in progress v1 risk management in licence

DCS-1893 small refactor to getRoStageState

DCS-1893 added condition to only show mandatory address warning banner on tasklist if mandatory checks not considered and bass address not suitable

DCS-1893 fix risk management page layout

DCS-1893 update risk action routes and add risk management v2 review content

DCS-1893 added licence status tests for RO risk management processing

DCS-1893 fix warnings for risk management content in task list view

DCS-1893 fix conditional risk management content in task list view

DCS-1893 integration tests

DCS-1893 updated risk page template, risk form validation and RiskVersion type to string options

--- a/feature.env
+++ b/feature.env
@@ -52,3 +52,5 @@ DOMAIN=http://localhost:3000
 EXIT_LOCATION_URL=/
 GLOBAL_SEARCH_URL=http://localhost:3002/global-search
 FEEDBACK_SUPPORT_URL=https://support-dev.hmpps.service.justice.gov.uk/feedback-and-support
+
+LICENCE_RISK_MANAGEMENT_VERSION=2
