DCS-1893 correct integration test command for circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,7 +141,7 @@ jobs:
           background: true
       - run:
           name: Run the node app.
-          command: npm start
+          command: npm run start:feature
           background: true
       - run:
           name: Wait for node app to start
