DCS-1893 update feature.env to match circleci config standard env variables and hopefully fix circleci integration tests

--- a/feature.env
+++ b/feature.env
@@ -41,11 +41,11 @@ PROBATION_TEAMS_API_CLIENT_SECRET=clientsecret
 
 # GOTENBERG
 GOTENBERG_API_URL=http://localhost:3001
-HDC_URL=http://host.docker.internal:3000
+HDC_URL=http://localhost:3000
 
 # TOKEN VERIFICATION
 TOKENVERIFICATION_API_URL=http://localhost:8100
-TOKENVERIFICATION_API_ENABLED=true
+TOKENVERIFICATION_API_ENABLED=false
 
 # LOCATIONS
 DOMAIN=http://localhost:3000
