--- a/helm_deploy/licences/Chart.yaml
+++ b/helm_deploy/licences/Chart.yaml
@@ -11,3 +11,6 @@ dependencies:
   - name: generic-prometheus-alerts
     version: 0.4.1
     repository: https://ministryofjustice.github.io/hmpps-helm-charts
+  - name: generic-data-analytics-extractor
+    version: 0.1.3
+    repository: https://ministryofjustice.github.io/hmpps-helm-charts
