--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -16,6 +16,9 @@ gotenberg:
     tag: 6.4.3
     port: 3000
 
+generic-data-analytics-extractor:
+  enabled: true
+
 ingress:
   enabled: true
   enable_allowlist: false
