DCS-1974 enable generic data analytics extractor in all environs

--- a/helm_deploy/licences/values.yaml
+++ b/helm_deploy/licences/values.yaml
@@ -7,6 +7,7 @@ generic-prometheus-alerts:
 generic-data-analytics-extractor:
   databaseSecretName: dps-rds-instance-output
   analyticalPlatformSecretName: licences-analytical-platform-reporting-s3-bucket
+  enabled: true
 
 ingress:
   annotations:
