--- a/licences-specs/build.gradle
+++ b/licences-specs/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
 task mockTest(type: Test) {
   systemProperty 'geb.env', 'chromeHeadless'
+  systemProperty 'webdriver.chrome.driver', '/usr/local/bin/chromedriver/chromedriver'
   group = 'verification'
 }
 
