--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -101,3 +101,6 @@ allowlist:
   fivewells-4: "195.59.215.184/29"
   global-protect: "35.176.93.186/32"
   petty-france-wifi: "213.121.161.112/28"
+
+generic-prometheus-alerts:
+  alertSeverity: cvl-alerts-non-prod
