--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start:dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"Views,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-views\" \"npm run watch-ts\" \"npm run watch-node\"",
     "start:feature": "set -a; source feature.env; set +a && npm run build && npm start",
     "start-mocks": "node mock-server/start.js",
-    "test": "jest --runInBand --testPathPattern=/test/.*",
+    "test:ci": "jest --runInBand --testPathPattern=/test/.*",
+    "test": "jest --testPathPattern=/test/.*",
     "integration-test": "jest --runInBand --testPathPattern=/integration_test/.*",
     "lint": "eslint .",
     "typecheck": "tsc",
@@ -61,6 +62,14 @@
   },
   "homepage": "https://github.com/noms-digital-studio/licences#readme",
   "jest": {
+    "transform": {
+      "^.+\\.tsx?$": [
+        "ts-jest",
+        {
+          "isolatedModules": true
+        }
+      ]
+    },
     "preset": "ts-jest",
     "collectCoverageFrom": [
       "server/**/*.{ts,js,jsx,mjs}"
@@ -95,28 +104,27 @@
   },
   "dependencies": {
     "@hapi/joi-date": "^2.0.1",
-    "adm-zip": "^0.5.10",
     "agentkeepalive": "^4.2.1",
-    "applicationinsights": "^2.3.6",
-    "applicationinsights-native-metrics": "^0.0.8",
-    "body-parser": "^1.20.1",
+    "applicationinsights": "^2.7.0",
+    "applicationinsights-native-metrics": "^0.0.9",
+    "body-parser": "^1.20.2",
     "case": "^1.6.3",
     "compression": "^1.7.4",
     "concat-stream": "^2.0.0",
     "config": "^3.3.8",
     "connect-flash": "^0.1.1",
-    "connect-redis": "^6.1.3",
+    "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "csurf": "^1.11.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "1.17.3",
     "govuk_frontend_toolkit": "^9.0.1",
     "govuk_template_jinja": "^0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "helmet": "^6.0.1",
-    "joi": "^17.7.0",
+    "joi": "^17.9.2",
     "jquery": "^3.6.1",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
@@ -124,56 +132,56 @@
     "knex-migrate": "^1.7.4",
     "moment": "2.29.4",
     "moment-business-days": "^1.2.0",
-    "nocache": "^3.0.4",
-    "node-schedule": "^2.1.0",
+    "nocache": "^4.0.0",
+    "node-schedule": "^2.1.1",
     "notifications-node-client": "^6.0.0",
     "passport": "^0.6.0",
     "passport-oauth2": "^1.6.1",
     "path": "^0.12.7",
-    "pg": "^8.8.0",
+    "pg": "^8.11.1",
     "pg-format": "^1.0.4",
     "poll-endpoint-for": "0.0.7",
     "pug": "3.0.2",
     "querystring": "^0.2.1",
     "ramda": "^0.28.0",
-    "redis": "^4.5.1",
+    "redis": "^4.6.7",
     "romannumerals": "^1.1.1",
     "string-hash": "^1.1.3",
     "superagent": "^8.0.4",
     "swagger-ui-express": "^4.6.0",
     "util": "^0.12.5",
     "uuid": "^9.0.0",
-    "winston": "^3.8.2"
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/connect-flash": "^0.0.37",
-    "@types/jest": "^29.2.3",
+    "@types/jest": "^29.5.3",
     "@types/node": "^18.14.2",
-    "@types/passport": "^1.0.11",
+    "@types/passport": "^1.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
-    "audit-ci": "^6.3.0",
-    "concurrently": "^7.6.0",
-    "eslint": "^8.19.0",
+    "audit-ci": "^6.6.1",
+    "concurrently": "^8.2.0",
+    "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.2",
+    "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
-    "jest-html-reporter": "^3.7.0",
-    "jest-junit": "^15.0.0",
+    "jest-html-reporter": "^3.10.1",
+    "jest-junit": "^16.0.0",
     "lint-staged": "^13.0.3",
     "nock": "^13.2.9",
     "node-sass": "^8.0.0",
     "nodemon": "^3.0.1",
     "pdf-parse": "^1.1.1",
-    "prettier": "^2.7.1",
-    "supertest": "^6.3.1",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.9.3"
+    "prettier": "^3.0.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6"
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
